# flux-md

./: .gitignore  README.md  package.json  socket.yml
.github/workflows/: ci.yml  publish.yml
crates/flux-md-core/: Cargo.toml
crates/flux-md-core/examples/: bench.rs  bench_table_data.rs
crates/flux-md-core/src/: blocks.rs  entities.rs  inline.rs  lib.rs  parser.rs  render.rs  scanner.rs  sort.rs  url.rs
crates/flux-md-core/tests/: a11y.rs  block_kind_serde_golden.rs  code_fence_cache.rs  codeblock_block_data.rs  component_tags.rs  container_block_data.rs  container_cache.rs  dir_auto.rs  finalize_parity.rs  fuzz_partial_code.rs  fuzz_partial_link.rs  fuzz_streaming.rs  heading_block_data.rs  html_sanitize.rs  inline_component_tags.rs  list_block_data.rs  list_cache.rs  math.rs  math_fence_cache.rs  mathblock_block_data.rs  midstream_parity.rs  paragraph_streaming.rs  ref_defs_streaming.rs  regressions.rs  security.rs  streamdown_issues.rs  table_block_data.rs  table_streaming.rs  unclosed_block_cache.rs
web/: data-studio.smoke.mjs  index.html  package.json  vite.flux.config.ts
web/src/: App.tsx  flux-entry.ts  styles.css
web/src/components/: Chat.tsx  ComponentsDemo.tsx  DataStudio.tsx  MetricsHud.tsx  StreamLab.tsx
web/src/streaming/: demoDoc.ts
