[package]
name = "flux-md-core"
version = "0.10.0"
edition = "2021"
description = "Incremental, streaming-aware markdown parser with speculative closure"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Zero parser deps. wasm-bindgen + serde-wasm-bindgen are JS interop glue,
# not markdown libraries. serde is for the patch struct serialization.
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
# Used ONLY by the CommonMark spec test runner to load spec.json. Not part
# of the shipped library.
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
