[package]
name = "flux-md-core"
version = "0.15.0"
edition = "2021"
description = "Incremental, streaming-aware markdown parser with speculative closure"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Zero parser deps. wasm-bindgen is the JS interop glue, not a markdown library.
# Patches/blocks cross the WASM↔JS boundary as a JSON string: serde_json::to_string
# in Rust + JSON.parse on the main thread is cheaper than serde-wasm-bindgen's
# per-node object construction, and a string structuredClones far cheaper than an
# object graph on the worker→main postMessage (the worker forwards it verbatim).
# Dropping serde-wasm-bindgen + js-sys also shrinks the wasm.
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--strip-producers", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
